@@ -1,6 +1,6 @@
 #!/bin/sh
 #     dctrl-tools - Debian control file inspection tools
-#     Copyright (C) 2007, 2010, 2011 Antti-Juhani Kaijanaho
+#     Copyright (C) 2007, 2010, 2011, 2012 Antti-Juhani Kaijanaho
 #
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -83,10 +83,18 @@ for tst in $tests ; do
         echo "ok."
     else
         echo "FAILED."
-        echo "stdout diff:"
-        cat .diffout
-        echo "stderr diff:"
-        cat .differr
+        if [ -r .diffout ] ; then
+            echo "stdout diff:"
+            cat .diffout
+        else
+            echo "no stdout diff"
+        fi
+        if [ -r .differr ] ; then
+            echo "stderr diff:"
+            cat .differr
+        else
+            echo "no stderr diff"
+        fi
         rv=1
     fi
 done
